public/css/data-entry.css
@media (min-width: 980px) {
    .form-horizontal .control-label {
        width: 32%;
    }

    .form-horizontal .controls {
        margin-left: 34%;
    }
}


/* Form 9 special styling */
#control-group-institutional_demographics_companies_less_than_50,
#control-group-institutional_demographics_companies_50_to_99,
#control-group-institutional_demographics_companies_100_to_499,
#control-group-institutional_demographics_companies_500_or_greater {
    margin-left: 100px;
}
#control-group-institutional_demographics_companies_less_than_50 label,
#control-group-institutional_demographics_companies_50_to_99 label,
#control-group-institutional_demographics_companies_100_to_499 label,
#control-group-institutional_demographics_companies_500_or_greater label {
    font-size: 82%;
}

/* System admin switching */
form#system-admin-switch {
    margin-top: 10px;
}
form#system-admin-switch select {
    margin-right: 10px;
}
/*
.controls {
    clear: both;
}
.form-horizontal input, .form-horizontal textarea, .form-horizontal select {
    float: left;
}
.form-horizontal .help-block {
    margin-bottom: 0;
    border: 2px solid #CCC;
    padding: 10px;
    font-size: 12px;
    width: 50%;
    margin-left: 200px;
}*/

.form-horizontal .controls {
    width: 200px;
}

/* Side-by-side fields in instruction form */
.two-col .control-group {
    width: 47%;
    float: left;
    height: 150px;
}

#fieldset-buttons {
    clear: both;
}

.priorYearValue {
    background: #AAA;
    color: white;
    padding: 12px 7px 3px 7px;
    margin-left: -11px;
}

/* standard data entry help */
.form-horizontal .controls {
    margin-left: 15px;
    float:left;
}

.help-block {
    float: left;
    width: 40%;
    border: 2px solid #DDD;
    background: #DDD;
    padding: 7px 10px;
}

/* NCCBP */
.input-group .form-control, .input-group {
    width: 137px;
}


/* Workforce Project */

/* Heading on revenue page */
#control-group-revenue_federal,
#control-group-revenue_state,
#control-group-revenue_local {
    margin-left: 150px;
}
#control-group-revenue_federal label,
#control-group-revenue_state label,
#control-group-revenue_local label {
    font-size: 82%;
}

div.subgroup {
    margin-left: 150px;
}

h4.subheading {
    margin-top: 25px;
    width: 32%;
    text-align: right;
    font-size: 14px;
}

h3.heading {
    border-bottom: 1px solid #CCC;
    margin-top: 30px;
}

.heading-notes {
    font-style: italic;
    margin-bottom: 20px;
    font-size: 1.3em;
    font-weight: bold;
}

.subheading-notes {
    font-style: italic;
    margin-bottom: 20px;
    width: 32%;
    text-align: right;
}

.lightLabel {
    color: #CCC;
}

/* Only show data definition when the field is focused */
.control-group p {
    display: none
}
.control-group.focus p {
    display: block;
}

/* Demographics */
#race-ethnicity-total {
    padding: 5px 0px;
    font-weight: bold;
}
#race-ethnicity-total.error {
    color: #B94A48;
}

.race-ethnicity-error {
    display: none;
}
.error .race-ethnicity-error {
    display: block;
}

